# omnitool

./: .gitignore  README.md  pyproject.toml
src/omnitool/: cli.py
src/omnitool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/omnitool/configs/: tmux.conf
src/omnitool/tools/: containers.py  tmux.py
